--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,23 +33,25 @@ jobs:
           path: |
             babylon/build
             babylon/hat/build
-          key: ${{ runner.os }}-babylon-hat-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('babylon/.git/HEAD') }}
+          key: ${{ runner.os }}-babylon-hat-${{ hashFiles('babylon/.git/HEAD') }}
           restore-keys: |
-            ${{ runner.os }}-babylon-hat-${{ hashFiles('.github/workflows/ci.yml') }}-
             ${{ runner.os }}-babylon-hat-
 
       - name: Install Build Dependencies
+        if: steps.cache-babylon.outputs.cache-hit != 'true'
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential libx11-dev libxext-dev libxrender-dev libxrandr-dev libxtst-dev libxt-dev libcups2-dev libasound2-dev libfontconfig1-dev autoconf
 
       - name: Setup Boot JDK
+        if: steps.cache-babylon.outputs.cache-hit != 'true'
         uses: actions/setup-java@v4
         with:
           java-version: '25'
           distribution: 'temurin'
 
       - name: Configure and Build Babylon
+        if: steps.cache-babylon.outputs.cache-hit != 'true'
         id: build-jdk
         continue-on-error: true
         run: |
@@ -71,7 +73,7 @@ jobs:
           make images JOBS=$(nproc) CONF=linux-x86_64-server-release
 
       - name: Retry Build if failed
-        if: steps.build-jdk.outcome == 'failure'
+        if: steps.cache-babylon.outputs.cache-hit != 'true' && steps.build-jdk.outcome == 'failure'
         run: |
           cd babylon
           echo "Build failed, attempting reconfigure and retry..."
@@ -79,6 +81,7 @@ jobs:
           make images JOBS=$(nproc) CONF=linux-x86_64-server-release
 
       - name: Build HAT
+        if: steps.cache-babylon.outputs.cache-hit != 'true'
         run: |
           cd babylon/hat
           export JAVA_HOME=$(pwd)/../build/linux-x86_64-server-release/images/jdk
@@ -144,13 +147,6 @@ jobs:
           ./gradlew build
           ./gradlew test
 
-      - name: Run HAT Backend Bug Tests (OpenCL FFI + Java MT)
-        continue-on-error: true
-        run: |
-          export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          ./gradlew openclBugTest
-
       - name: Download TinyLlama
         run: |
           chmod +x scripts/download_tinyllama.sh
@@ -161,4 +157,4 @@ jobs:
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
           export TINY_LLAMA_PATH=$(pwd)/tinyllama-1.1b-chat-v1.0.Q2_K.gguf
-          ./gradlew plainJavaIntegrationTest
+          ./gradlew plainIntegrationTest
