--- a/.github/workflows/benchmark-pages.yml
+++ b/.github/workflows/benchmark-pages.yml
@@ -89,6 +89,10 @@ jobs:
     needs: build-babylon
     runs-on: ubuntu-latest
     timeout-minutes: 180
+    env:
+      CI: "true"
+      LLAMA_FP16_PATH: ${{ github.workspace }}/Llama-3.2-1B-Instruct-f16.gguf
+      RUN_OPENCL_BENCHMARKS: "true"
     steps:
       - name: Checkout Project
         uses: actions/checkout@v4
@@ -128,9 +132,6 @@ jobs:
           ./gradlew build -x test --console=plain
 
       - name: Run Inference Benchmarks
-        env:
-          CI: "true"
-          LLAMA_FP16_PATH: ${{ github.workspace }}/Llama-3.2-1B-Instruct-f16.gguf
         run: |
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
