fix: install PoCL on CI for OpenCL benchmarks and handle missing runtime gracefully
Install pocl-opencl-icd on the benchmark runner so the HAT OpenCL backend
can initialize. Catch ServiceConfigurationError as a clean skip when no
OpenCL runtime is available. Add disclaimer that OpenCL numbers use
CPU-based PoCL, not real GPU hardware.

--- a/.github/workflows/benchmark-pages.yml
+++ b/.github/workflows/benchmark-pages.yml
@@ -125,6 +125,13 @@ jobs:
           chmod +x scripts/download_llama_fp16.sh
           ./scripts/download_llama_fp16.sh
 
+      - name: Install PoCL (CPU OpenCL)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pocl-opencl-icd ocl-icd-libopencl1 clinfo
+          echo "--- OpenCL devices ---"
+          clinfo --list || true
+
       - name: Build Project
         run: |
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
