--- a/.github/workflows/benchmark-pages-gcp-t4.yml
+++ b/.github/workflows/benchmark-pages-gcp-t4.yml
@@ -109,7 +109,7 @@ jobs:
         run: |
           git fetch origin gh-pages:gh-pages 2>/dev/null || true
           mkdir -p existing-data
-          git show gh-pages:data/benchmark-history.json > existing-data/benchmark-history.json 2>/dev/null || echo '{"runs":[]}' > existing-data/benchmark-history.json
+          git show gh-pages:benchmark-page/gcp-t4/data/benchmark-history.json > existing-data/benchmark-history.json 2>/dev/null || echo '{"runs":[]}' > existing-data/benchmark-history.json
 
       - name: Install jq
         run: sudo apt-get install -y jq
@@ -133,5 +133,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./deploy
-          keep_files: false
-          commit_message: "Update GCP T4 benchmark results (${{ github.sha }})"
+          destination_dir: benchmark-page/gcp-t4
+          keep_files: true
+          commit_message: "Update benchmark results (GCP T4, ${{ github.sha }})"
