ci: migrate all workflows to Nix with magic-nix-cache
Replace the manual build-babylon jobs (checkout + configure + make +
artifact upload/download) with Nix derivations cached via
DeterminateSystems/magic-nix-cache-action (backed by GHA cache).

- ci.yml: nix build for formatting, build, unit tests, integration
- nightly.yml: Nix checks for tests, nix develop for benchmarks
- chat-test.yml: Nix checks for baseline/HAT, nix develop for kernel matrix
- weekly-full-matrix.yml: Nix checks + nix develop for benchmarks/regression
- benchmark-pages.yml: nix develop for inference benchmarks
- benchmark-pages-gcp-t4.yml: unchanged (GCP VM based)

After the first CI run populates the cache, Babylon JDK and HAT
artefacts are served in seconds instead of rebuilt from source.

--- a/.github/workflows/benchmark-pages.yml
+++ b/.github/workflows/benchmark-pages.yml
@@ -9,84 +9,7 @@ permissions:
   contents: write
 
 jobs:
-  build-babylon:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Babylon
-        uses: actions/checkout@v4
-        with:
-          repository: openjdk/babylon
-          path: babylon
-          ref: code-reflection
-
-      - name: Cache Babylon JDK and HAT
-        id: cache-babylon
-        uses: actions/cache@v4
-        with:
-          path: |
-            babylon/build
-            babylon/hat/build
-          key: ${{ runner.os }}-babylon-hat-bench-${{ hashFiles('babylon/.git/HEAD') }}
-          restore-keys: |
-            ${{ runner.os }}-babylon-hat-bench-
-            ${{ runner.os }}-babylon-hat-
-
-      - name: Install Build Dependencies
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential libx11-dev libxext-dev libxrender-dev libxrandr-dev libxtst-dev libxt-dev libcups2-dev libasound2-dev libfontconfig1-dev autoconf
-
-      - name: Setup Boot JDK
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
-        uses: actions/setup-java@v4
-        with:
-          java-version: '25'
-          distribution: 'temurin'
-
-      - name: Configure and Build Babylon
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
-        id: build-jdk
-        continue-on-error: true
-        run: |
-          cd babylon
-          if [ -f build/linux-x86_64-server-release/spec.gmk ]; then
-            if ! make JOBS=$(nproc) CONF=linux-x86_64-server-release check-conf > /dev/null 2>&1; then
-              make reconfigure JOBS=$(nproc) CONF=linux-x86_64-server-release
-            fi
-          else
-            bash configure --with-conf-name=linux-x86_64-server-release --with-debug-level=release --with-native-debug-symbols=none --disable-warnings-as-errors
-          fi
-          make images JOBS=$(nproc) CONF=linux-x86_64-server-release
-
-      - name: Retry Build if failed
-        if: steps.cache-babylon.outputs.cache-hit != 'true' && steps.build-jdk.outcome == 'failure'
-        run: |
-          cd babylon
-          make reconfigure JOBS=$(nproc) CONF=linux-x86_64-server-release
-          make images JOBS=$(nproc) CONF=linux-x86_64-server-release
-
-      - name: Build HAT
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
-        run: |
-          cd babylon/hat
-          export JAVA_HOME=$(pwd)/../build/linux-x86_64-server-release/images/jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          bash hat/bootstrap.bash
-          java -cp hat/job.jar --enable-preview --source 26 hat.java bld
-
-      - name: Upload Babylon Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: babylon-jdk-bench-pages
-          path: |
-            babylon/build/linux-x86_64-server-release/images/jdk
-            babylon/hat/build
-          include-hidden-files: true
-          retention-days: 1
-
   run-benchmarks:
-    needs: build-babylon
     runs-on: ubuntu-latest
     timeout-minutes: 180
     env:
@@ -94,23 +17,9 @@ jobs:
       LLAMA_FP16_PATH: ${{ github.workspace }}/Llama-3.2-1B-Instruct-f16.gguf
       RUN_OPENCL_BENCHMARKS: "true"
     steps:
-      - name: Checkout Project
-        uses: actions/checkout@v4
-
-      - name: Download Babylon Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: babylon-jdk-bench-pages
-          path: babylon-jdk
-
-      - name: Setup Environment
-        run: |
-          JDK_PATH=babylon-jdk/build/linux-x86_64-server-release/images/jdk
-          chmod -R +x $JDK_PATH/bin/
-          find $JDK_PATH/lib -type f -name "jspawnhelper" -exec chmod +x {} \;
-          find $JDK_PATH/lib -type f -name "*.so" -exec chmod +x {} \;
-          echo "JAVA_BABYLON_ROOT=$(pwd)/babylon-jdk" >> $GITHUB_ENV
-          chmod +x gradlew
+      - uses: actions/checkout@v4
+      - uses: cachix/install-nix-action@v30
+      - uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Cache Llama 3.2 1B Model
         id: cache-llama
@@ -121,9 +30,7 @@ jobs:
 
       - name: Download Llama 3.2 1B Instruct FP16
         if: steps.cache-llama.outputs.cache-hit != 'true'
-        run: |
-          chmod +x scripts/download_llama_fp16.sh
-          ./scripts/download_llama_fp16.sh
+        run: ./scripts/download_llama_fp16.sh
 
       - name: Install PoCL (CPU OpenCL)
         run: |
@@ -132,19 +39,17 @@ jobs:
           echo "--- OpenCL devices ---"
           clinfo --list || true
 
-      - name: Build Project
+      - name: Run inference benchmarks
         run: |
-          export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          ./gradlew build -x test --console=plain
+          nix develop -c bash -c '
+            set -euo pipefail
+            export GRADLE_OPTS="${GRADLE_OPTS:-} -Dorg.gradle.java.installations.paths=$JAVA_HOME"
+            export PATH="$JAVA_HOME/bin:$PATH"
+            chmod +x gradlew
+            ./gradlew benchmarkInference --console=plain
+          '
 
-      - name: Run Inference Benchmarks
-        run: |
-          export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          ./gradlew benchmarkInference --console=plain
-
-      - name: Upload Benchmark Results
+      - name: Upload benchmark results
         if: always()
         uses: actions/upload-artifact@v4
         with:
