--- a/.github/workflows/chat-test.yml
+++ b/.github/workflows/chat-test.yml
@@ -2,7 +2,7 @@ name: E2E Integration Tests (FP16 + HAT)
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
     paths-ignore:
       - '**.md'
       - 'docs/**'
@@ -23,150 +23,24 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build-babylon:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Babylon
-        uses: actions/checkout@v4
-        with:
-          repository: openjdk/babylon
-          path: babylon
-          ref: code-reflection
-
-      - name: Cache Babylon JDK and HAT
-        id: cache-babylon
-        uses: actions/cache@v4
-        with:
-          path: |
-            babylon/build
-            babylon/hat/build
-          key: ${{ runner.os }}-babylon-hat-${{ hashFiles('babylon/.git/HEAD') }}
-          restore-keys: |
-            ${{ runner.os }}-babylon-hat-
-
-      - name: Install Build Dependencies
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential libx11-dev libxext-dev libxrender-dev libxrandr-dev libxtst-dev libxt-dev libcups2-dev libasound2-dev libfontconfig1-dev autoconf
-
-      - name: Setup Boot JDK
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
-        uses: actions/setup-java@v4
-        with:
-          java-version: '25'
-          distribution: 'temurin'
-
-      - name: Configure and Build Babylon
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
-        id: build-jdk
-        continue-on-error: true
-        run: |
-          cd babylon
-          if [ -f build/linux-x86_64-server-release/spec.gmk ]; then
-            echo "Build already configured, checking if update is needed..."
-            if ! make JOBS=$(nproc) CONF=linux-x86_64-server-release check-conf > /dev/null 2>&1; then
-              echo "Configuration is out of date, reconfiguring..."
-              make reconfigure JOBS=$(nproc) CONF=linux-x86_64-server-release
-            else
-              echo "Configuration is up to date."
-            fi
-          else
-            echo "Configuring Babylon JDK build..."
-            bash configure --with-conf-name=linux-x86_64-server-release --with-debug-level=release --with-native-debug-symbols=none --disable-warnings-as-errors
-          fi
-
-          echo "Building Babylon JDK..."
-          make images JOBS=$(nproc) CONF=linux-x86_64-server-release
-
-      - name: Retry Build if failed
-        if: steps.cache-babylon.outputs.cache-hit != 'true' && steps.build-jdk.outcome == 'failure'
-        run: |
-          cd babylon
-          echo "Build failed, attempting reconfigure and retry..."
-          make reconfigure JOBS=$(nproc) CONF=linux-x86_64-server-release
-          make images JOBS=$(nproc) CONF=linux-x86_64-server-release
-
-      - name: Build HAT
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
-        run: |
-          cd babylon/hat
-          export JAVA_HOME=$(pwd)/../build/linux-x86_64-server-release/images/jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          bash hat/bootstrap.bash
-          java -cp hat/job.jar --enable-preview --source 26 hat.java bld
-
-      - name: Upload Babylon Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: babylon-jdk-chat
-          path: |
-            babylon/build/linux-x86_64-server-release/images/jdk
-            babylon/hat/build
-          include-hidden-files: true
-          retention-days: 7
-
-  # Job 1: Plain Java baseline test
+  # Job 1: Plain Java baseline test (pure Nix check — model fetched by Nix)
   baseline-test:
-    needs: build-babylon
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
-      - name: Checkout Project
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: cachix/install-nix-action@v30
+      - uses: DeterminateSystems/magic-nix-cache-action@main
 
-      - name: Download Babylon Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: babylon-jdk-chat
-          path: babylon-jdk
+      - name: Plain Java integration tests
+        run: nix build .#checks.x86_64-linux.plain-integration-tests -o result-baseline
 
-      - name: Setup Environment
-        run: |
-          JDK_PATH=babylon-jdk/build/linux-x86_64-server-release/images/jdk
-          chmod -R +x $JDK_PATH/bin/
-          find $JDK_PATH/lib -type f -name "jspawnhelper" -exec chmod +x {} \;
-          find $JDK_PATH/lib -type f -name "*.so" -exec chmod +x {} \;
-          echo "JAVA_BABYLON_ROOT=$(pwd)/babylon-jdk" >> $GITHUB_ENV
-          chmod +x gradlew
-
-      - name: Cache Llama 3.2 1B Model
-        id: cache-llama
-        uses: actions/cache@v4
-        with:
-          path: Llama-3.2-1B-Instruct-f16.gguf
-          key: llama-3.2-1b-instruct-f16-gguf
-
-      - name: Download Llama 3.2 1B Instruct FP16
-        if: steps.cache-llama.outputs.cache-hit != 'true'
-        run: |
-          chmod +x scripts/download_llama_fp16.sh
-          ./scripts/download_llama_fp16.sh
-
-      - name: Build Project
-        run: |
-          export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          ./gradlew build -x test --console=plain
-
-      - name: Run Plain Java Baseline Tests
-        timeout-minutes: 30
-        env:
-          CI: "true"
-        run: |
-          export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          export LLAMA_FP16_PATH=$(pwd)/Llama-3.2-1B-Instruct-f16.gguf
-          ./gradlew plainIntegrationTest --tests "com.arturskowronski.llama3babylon.hat.integration.chat.ChatPlainIntegrationTest" --console=plain
-
-      - name: Upload Baseline Results
+      - name: Upload baseline results
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: results-baseline
-          path: |
-            build/reports/tests/integrationTest/
-            build/test-results/integrationTest/
+          path: result-baseline/reports/
           retention-days: 7
 
   # Job 2: All-HAT test (all 6 kernels enabled simultaneously)
@@ -177,61 +51,19 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
-      - name: Checkout Project
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: cachix/install-nix-action@v30
+      - uses: DeterminateSystems/magic-nix-cache-action@main
 
-      - name: Download Babylon Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: babylon-jdk-chat
-          path: babylon-jdk
+      - name: HAT integration tests
+        run: nix build .#checks.x86_64-linux.hat-integration-tests -o result-all-hat
 
-      - name: Setup Environment
-        run: |
-          JDK_PATH=babylon-jdk/build/linux-x86_64-server-release/images/jdk
-          chmod -R +x $JDK_PATH/bin/
-          find $JDK_PATH/lib -type f -name "jspawnhelper" -exec chmod +x {} \;
-          find $JDK_PATH/lib -type f -name "*.so" -exec chmod +x {} \;
-          echo "JAVA_BABYLON_ROOT=$(pwd)/babylon-jdk" >> $GITHUB_ENV
-          chmod +x gradlew
-
-      - name: Cache Llama 3.2 1B Model
-        id: cache-llama
-        uses: actions/cache@v4
-        with:
-          path: Llama-3.2-1B-Instruct-f16.gguf
-          key: llama-3.2-1b-instruct-f16-gguf
-
-      - name: Download Llama 3.2 1B Instruct FP16
-        if: steps.cache-llama.outputs.cache-hit != 'true'
-        run: |
-          chmod +x scripts/download_llama_fp16.sh
-          ./scripts/download_llama_fp16.sh
-
-      - name: Build Project
-        run: |
-          export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          ./gradlew build -x test --console=plain
-
-      - name: Run HAT Sequential Integration Tests
-        timeout-minutes: 30
-        env:
-          CI: "true"
-        run: |
-          export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          export LLAMA_FP16_PATH=$(pwd)/Llama-3.2-1B-Instruct-f16.gguf
-          ./gradlew hatIntegrationTest --console=plain
-
-      - name: Upload All-HAT Results
+      - name: Upload all-HAT results
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: results-all-hat
-          path: |
-            build/reports/tests/integrationTest/
-            build/test-results/integrationTest/
+          path: result-all-hat/reports/
           retention-days: 7
 
   # Job 3: Individual HAT kernel matrix (manual dispatch with full-matrix only)
@@ -245,23 +77,9 @@ jobs:
         kernel: [SiLU, RoPE, Softmax, RMSNorm, Attention, GEMV]
       fail-fast: false
     steps:
-      - name: Checkout Project
-        uses: actions/checkout@v4
-
-      - name: Download Babylon Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: babylon-jdk-chat
-          path: babylon-jdk
-
-      - name: Setup Environment
-        run: |
-          JDK_PATH=babylon-jdk/build/linux-x86_64-server-release/images/jdk
-          chmod -R +x $JDK_PATH/bin/
-          find $JDK_PATH/lib -type f -name "jspawnhelper" -exec chmod +x {} \;
-          find $JDK_PATH/lib -type f -name "*.so" -exec chmod +x {} \;
-          echo "JAVA_BABYLON_ROOT=$(pwd)/babylon-jdk" >> $GITHUB_ENV
-          chmod +x gradlew
+      - uses: actions/checkout@v4
+      - uses: cachix/install-nix-action@v30
+      - uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Cache Llama 3.2 1B Model
         id: cache-llama
@@ -272,32 +90,28 @@ jobs:
 
       - name: Download Llama 3.2 1B Instruct FP16
         if: steps.cache-llama.outputs.cache-hit != 'true'
-        run: |
-          chmod +x scripts/download_llama_fp16.sh
-          ./scripts/download_llama_fp16.sh
+        run: ./scripts/download_llama_fp16.sh
 
-      - name: Build Project
-        run: |
-          export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          ./gradlew build -x test --console=plain
-
-      - name: Run ${{ matrix.kernel }} HAT Integration Test
+      - name: Run ${{ matrix.kernel }} HAT regression test
         timeout-minutes: 30
         env:
           CI: "true"
+          LLAMA_FP16_PATH: ${{ github.workspace }}/Llama-3.2-1B-Instruct-f16.gguf
         run: |
-          export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          export LLAMA_FP16_PATH=$(pwd)/Llama-3.2-1B-Instruct-f16.gguf
-          ./gradlew regressionTest --tests "com.arturskowronski.llama3babylon.hat.regression.chat.ChatIntegrationTestWith${{ matrix.kernel }}HAT" --console=plain
+          nix develop -c bash -c '
+            set -euo pipefail
+            export GRADLE_OPTS="${GRADLE_OPTS:-} -Dorg.gradle.java.installations.paths=$JAVA_HOME"
+            export PATH="$JAVA_HOME/bin:$PATH"
+            chmod +x gradlew
+            ./gradlew regressionTest --tests "com.arturskowronski.llama3babylon.hat.regression.chat.ChatIntegrationTestWith${{ matrix.kernel }}HAT" --console=plain
+          '
 
-      - name: Upload ${{ matrix.kernel }} Results
+      - name: Upload ${{ matrix.kernel }} results
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: results-${{ matrix.kernel }}-hat
           path: |
-            build/reports/tests/integrationTest/
-            build/test-results/integrationTest/
+            build/reports/tests/regressionTest/
+            build/test-results/regressionTest/
           retention-days: 7
