--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,160 +1,50 @@
-name: Build Babylon and Run Tests
+name: Build and Test
 
 on:
   push:
-    branches: [ main, github-actions ]
+    branches: [main, github-actions]
     paths-ignore:
       - '**.md'
       - 'docs/**'
   pull_request:
-    branches: [ main ]
+    branches: [main]
     paths-ignore:
       - '**.md'
       - 'docs/**'
   workflow_dispatch:
 
+# Babylon JDK, HAT artefacts, and Gradle deps are Nix derivations —
+# after the first build they are served from the magic-nix-cache in seconds.
 jobs:
-  build-babylon:
-    runs-on: ubuntu-latest
-    outputs:
-      babylon-home: ${{ steps.set-path.outputs.babylon-home }}
-    steps:
-      - name: Checkout Babylon
-        uses: actions/checkout@v4
-        with:
-          repository: openjdk/babylon
-          path: babylon
-          ref: code-reflection
-
-      - name: Cache Babylon JDK and HAT
-        id: cache-babylon
-        uses: actions/cache@v4
-        with:
-          path: |
-            babylon/build
-            babylon/hat/build
-          key: ${{ runner.os }}-babylon-hat-${{ hashFiles('babylon/.git/HEAD') }}
-          restore-keys: |
-            ${{ runner.os }}-babylon-hat-
-
-      - name: Install Build Dependencies
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential libx11-dev libxext-dev libxrender-dev libxrandr-dev libxtst-dev libxt-dev libcups2-dev libasound2-dev libfontconfig1-dev autoconf
-
-      - name: Setup Boot JDK
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
-        uses: actions/setup-java@v4
-        with:
-          java-version: '25'
-          distribution: 'temurin'
-
-      - name: Configure and Build Babylon
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
-        id: build-jdk
-        continue-on-error: true
-        run: |
-          cd babylon
-          if [ -f build/linux-x86_64-server-release/spec.gmk ]; then
-            echo "Build already configured, checking if update is needed..."
-            if ! make JOBS=$(nproc) CONF=linux-x86_64-server-release check-conf > /dev/null 2>&1; then
-              echo "Configuration is out of date, reconfiguring..."
-              make reconfigure JOBS=$(nproc) CONF=linux-x86_64-server-release
-            else
-              echo "Configuration is up to date."
-            fi
-          else
-            echo "Configuring Babylon JDK build..."
-            bash configure --with-conf-name=linux-x86_64-server-release --with-debug-level=release --with-native-debug-symbols=none --disable-warnings-as-errors
-          fi
-          
-          echo "Building Babylon JDK..."
-          make images JOBS=$(nproc) CONF=linux-x86_64-server-release
-
-      - name: Retry Build if failed
-        if: steps.cache-babylon.outputs.cache-hit != 'true' && steps.build-jdk.outcome == 'failure'
-        run: |
-          cd babylon
-          echo "Build failed, attempting reconfigure and retry..."
-          make reconfigure JOBS=$(nproc) CONF=linux-x86_64-server-release
-          make images JOBS=$(nproc) CONF=linux-x86_64-server-release
-
-      - name: Build HAT
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
-        run: |
-          cd babylon/hat
-          export JAVA_HOME=$(pwd)/../build/linux-x86_64-server-release/images/jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          bash hat/bootstrap.bash
-          java -cp hat/job.jar --enable-preview --source 26 hat.java bld
-
-      - name: Set Babylon Home Output
-        id: set-path
-        run: echo "babylon-home=$(pwd)/babylon/build/linux-x86_64-server-release/images/jdk" >> $GITHUB_OUTPUT
-
-      - name: Upload Babylon Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: babylon-jdk
-          path: |
-            babylon/build/linux-x86_64-server-release/images/jdk
-            babylon/hat/build
-          include-hidden-files: true
-          retention-days: 7
-
   build-and-test:
-    needs: build-babylon
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Project
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: cachix/install-nix-action@v30
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      # Alternative: dedicated Cachix binary cache (needs CACHIX_AUTH_TOKEN secret)
+      # - uses: cachix/cachix-action@v15
+      #   with:
+      #     name: <your-cache-name>
+      #     authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
-      - name: Download Babylon Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: babylon-jdk
-          path: babylon-jdk
+      - name: Check formatting
+        run: nix build .#checks.x86_64-linux.formatting
 
-      - name: Install OpenCL CPU Runtime (PoCL)
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y pocl-opencl-icd ocl-icd-opencl-dev
-          echo "=== Installed OpenCL platforms ==="
-          clinfo --list 2>/dev/null || echo "clinfo not available, but PoCL ICD is installed"
+      - name: Build project
+        run: nix build .#llama3-java-hat
 
-      - name: Setup Environment
-        run: |
-          echo "=== Debug: Listing artifact contents ==="
-          ls -la babylon-jdk/
-          echo "=== Checking for JDK ==="
-          find babylon-jdk -name "java" -type f 2>/dev/null | head -5 || echo "No java binary found"
-          echo "=== Checking for HAT ==="
-          find babylon-jdk -name "hat-core*.jar" -type f 2>/dev/null | head -5 || echo "No HAT jars found"
-          echo "=== Making JDK binaries executable ==="
-          JDK_PATH=babylon-jdk/build/linux-x86_64-server-release/images/jdk
-          chmod -R +x $JDK_PATH/bin/
-          # Also fix lib executables (jspawnhelper, etc.)
-          find $JDK_PATH/lib -type f -name "jspawnhelper" -exec chmod +x {} \;
-          find $JDK_PATH/lib -type f -name "*.so" -exec chmod +x {} \;
-          echo "JAVA_BABYLON_ROOT=$(pwd)/babylon-jdk" >> $GITHUB_ENV
-          chmod +x gradlew
+      - name: Unit tests
+        run: nix build .#checks.x86_64-linux.unit-tests
 
-      - name: Build and Test
-        run: |
-          export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          ./gradlew build
-          ./gradlew test
+  integration-tests:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    steps:
+      - uses: actions/checkout@v4
+      - uses: cachix/install-nix-action@v30
+      - uses: DeterminateSystems/magic-nix-cache-action@main
 
-      - name: Download TinyLlama
-        run: |
-          chmod +x scripts/download_tinyllama.sh
-          ./scripts/download_tinyllama.sh
-
-      - name: Run Plain Java Integration Tests
-        run: |
-          export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
-          export PATH=$JAVA_HOME/bin:$PATH
-          export TINY_LLAMA_PATH=$(pwd)/tinyllama-1.1b-chat-v1.0.Q2_K.gguf
-          ./gradlew plainIntegrationTest
+      - name: Plain Java integration tests
+        run: nix build .#checks.x86_64-linux.plain-integration-tests
